# hyprland-ipc

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  uv.lock.license
.github/: dependabot.yml
.github/scripts/: enable-automerge.sh
.github/workflows/: dependabot-auto-merge.yml  lint.yml  pre-commit-autoupdate.yml  release.yml  test-coverage.yml
LICENSES/: MIT.txt
src/hyprland_ipc/: __init__.py  ipc.py
tests/: __init__.py  conftest.py  test_ipc.py  test_ipc_edge_cases.py
