[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyprland-ipc"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "peppapig450", email = "peppapig450@pm.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/peppapig450/hyprland-ipc#readme"
Issues = "https://github.com/peppapig450/hyprland-ipc/issues"
Source = "https://github.com/peppapig450/hyprland-ipc"

[tool.hatch.version]
path = "src/hyprland_ipc/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/hyprland_ipc tests}"

[tool.coverage.run]
source_pkgs = ["hyprland_ipc", "tests"]
branch = true
parallel = true
omit = [
  "src/hyprland_ipc/__about__.py",
]

[tool.coverage.paths]
hyprland_ipc = ["src/hyprland_ipc", "*/hyprland-ipc/src/hyprland_ipc"]
tests = ["tests", "*/hyprland-ipc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
